# impostor-game

./: Dockerfile  LICENSE  README.md  compose.yml  config.yaml  main.py  pyproject.toml
api/: deps.py
api/routes/: rooms.py
impostor/: config.py  env.py  logging_config.py  main.py
impostor/api/: deps.py
impostor/api/routes/: game.py  rooms.py
impostor/application/: errors.py  game_service.py  guards.py  ports.py  room_service.py
impostor/domain/: models.py  turn.py  word_pool.py
impostor/infrastructure/: redis_room_store.py  ws_manager.py
static/: api.js  app.js  index.html  main.js  state.js  storage.js  styles.css  ui.js  ws.js
tests/: conftest.py  test_env_loader.py  test_guess_word.py  test_homepage.py  test_redis_room_store.py  test_roles_secret_word.py  test_room_lifecycle.py  test_room_lifecycle_roadmap.py  test_room_service.py  test_rooms.py  test_turn_word.py  test_voting.py  test_ws_manager.py
