[project]
name = "impostor"
version = "0.1.0"
description = "Secret word game"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.126.0",
    "redis>=7.1.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["impostor"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers>=4.13.3",
]

