[project]
name = "impostor"
version = "0.1.0"
description = "Secret word game"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.126.0",
    "PyYAML>=6.0.0",
    "redis>=7.1.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["impostor"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*wait_container_is_ready.*:DeprecationWarning:testcontainers.core.waiting_utils",
    "ignore:.*wait_container_is_ready.*:DeprecationWarning:testcontainers.redis",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "testcontainers>=4.13.3",
]
